[gd_scene load_steps=8 format=2]

[ext_resource path="res://tilemaps/tilemaps.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/mainworld.gd" type="Script" id=2]
[ext_resource path="res://sprites/background_cs50x_final.png" type="Texture" id=3]
[ext_resource path="res://OST/D1  SignPost Tutorials.ogg" type="AudioStream" id=4]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[node name="mainworld" type="Node2D"]
script = ExtResource( 2 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="panelplayerlist" type="Panel" parent="hud"]
margin_left = -1310.94
margin_top = 295.144
margin_right = -1186.94
margin_bottom = 321.144
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_localplayer" type="Label" parent="hud/panelplayerlist"]
margin_right = 40.0
margin_bottom = 14.0
text = "Local Player Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxlist" type="VBoxContainer" parent="hud/panelplayerlist"]
margin_left = -636.0
margin_top = -696.0
margin_right = -420.0
margin_bottom = -322.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_1_won" type="RichTextLabel" parent="hud"]
margin_left = 602.0
margin_top = 94.0
margin_right = 849.0
margin_bottom = 178.0
custom_fonts/normal_font = SubResource( 1 )
text = "PLAYER 1 WON
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_2_won" type="RichTextLabel" parent="hud"]
margin_left = 602.673
margin_top = 93.6913
margin_right = 978.673
margin_bottom = 153.691
custom_fonts/normal_font = SubResource( 2 )
text = "PLAYER 2 WON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawnpoints" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="spawnpoints"]
position = Vector2( 1243.48, 99.2942 )

[node name="2" type="Position2D" parent="spawnpoints"]
position = Vector2( 104.111, 600.416 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 686.599, 357.919 )
scale = Vector2( 44.5586, 25.11 )
texture = ExtResource( 3 )

[node name="levels" type="Node2D" parent="."]

[node name="level_1" type="Node2D" parent="levels"]

[node name="tilemaps" parent="levels/level_1" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 0, -131035, 0, 0, -131034, 0, 0, -131033, 0, 0, -131032, 0, 0, -131031, 0, 0, -131030, 0, 0, -131029, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 131071, 0, 0, 65536, 0, 0, 65578, 0, 0, 65579, 0, 0, 196607, 0, 0, 131072, 0, 0, 131114, 0, 0, 131115, 0, 0, 262143, 0, 0, 196608, 0, 0, 196650, 0, 0, 196651, 0, 0, 327679, 0, 0, 262144, 0, 0, 262186, 0, 0, 262187, 0, 0, 393215, 0, 0, 327680, 0, 0, 327722, 0, 0, 327723, 0, 0, 458751, 0, 0, 393216, 0, 0, 393236, 0, 0, 393237, 0, 0, 393258, 0, 0, 393259, 0, 0, 524287, 0, 0, 458752, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458794, 0, 0, 458795, 0, 0, 589823, 0, 0, 524288, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524330, 0, 0, 524331, 0, 0, 655359, 0, 0, 589824, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589866, 0, 0, 589867, 0, 0, 720895, 0, 0, 655360, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655402, 0, 0, 655403, 0, 0, 786431, 0, 0, 720896, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720938, 0, 0, 720939, 0, 0, 851967, 0, 0, 786432, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786474, 0, 0, 786475, 0, 0, 917503, 0, 0, 851968, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 852010, 0, 0, 852011, 0, 0, 983039, 0, 0, 917504, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917546, 0, 0, 917547, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983060, 0, 0, 983061, 0, 0, 983082, 0, 0, 983083, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1507327, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441829, 0, 0, 1441830, 0, 0, 1441831, 0, 0, 1441832, 0, 0, 1441833, 0, 0, 1441834, 0, 0, 1441835, 0, 0, 1572863, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1507367, 0, 0, 1507368, 0, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0 )

[node name="OST" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true
